# claude-sql

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  SECURITY.md  codecov.yml  lefthook.yml  mise.toml  pyproject.toml
.claude/: settings.json
.claude/skills/claude-sql/: SKILL.md
.erpaval/: INDEX.md
.erpaval/solutions/api-patterns/: anthropic-prompt-cache-tokenizer-gap.md  anyio-dispatcher-no-double-limiter.md  bandit-sarif-formatter-extras.md  bedrock-output-config-vs-converse.md  bedrock-shared-client-and-pool.md  betterleaks-not-on-pypi.md  claude-code-tool-taxonomy-2026.md  cris-profile-not-in-list.md  cyclonedx-python-uv-environment.md  duckdb-attach-catalog-check.md  duckdb-attach-lance-empty-namespace.md  duckdb-lag-named-window-vs-correlated-min.md  duckdb-list-avg-aggregate.md  duckdb-memory-limit-percent.md  duckdb-partdir-glob-union-by-insert.md  duckdb-read-json-rebinds-schema-on-describe.md  duckdb-table-macro-null-parameters.md  git-trailer-and-notes-binding.md  hdbscan-cp314-wheel-gap.md  import-linter-v2-contract-type-renames.md  lancedb-list-tables-pagination-shape.md  lefthook-push-gate-fallback.md  leidenalg-getattr-shim.md  returns-result-under-ty-strict.md  ruff-BLE001-not-fired-on-bare-reraise.md  semgrep-ci-container-not-action.md  ty-strict-mode-all-error.md  uv-build-namespace-form-1a-explicit-module-name.md  uv-native-pypi-publish-with-smoke-tests.md  uv-workspace-virtual-root-needs-all-packages.md
.erpaval/solutions/best-practices/: alias-idiom-shim-for-monkeypatched-modules.md  anthropic-xml-canonical-tags.md  anyio-structured-concurrency-for-blocking-io.md  branch-protection-pr-targeting-ci-trigger.md  checkpointer-doesnt-replace-sharded-cache-rows.md  ci-codeload-429-rerun.md  codeql-finds-narrow-except-and-unused-nested-classes.md  codeql-py-file-not-closed-in-test-mkstemp-fakes.md  conftest-import-needs-pythonpath-and-ty-root.md  cz-bump-via-pr-with-branch-protection.md  cz-changelog-gate-release-pr-carveout.md  cz-changelog-prefer-refactor-for-deprecation-removals.md  ghas-queued-checks-vs-actions-jobs.md  hexagonal-reshape-wave-order.md  loguru-only-no-stdlib-logging.md  os-environ-leak-across-test-modules.md  overnight-wave-gated-build-survives-restarts.md  parquet-existence-gate-over-log-demotion.md  parquet-schema-migration-rip-and-replace.md  pipeline-accumulator-explicit-key.md  pypi-trusted-publishing-dual-registration.md  read-side-dedup-companions-write-side-replace.md  rebase-before-bump.md  sarif-category-uniqueness-since-2025-07.md  sarif-scanner-report-vs-gate.md  sharded-cache-field-name-stability.md  sqlite-bulk-migration-explicit-begin-commit.md  sqlite-wal-cold-start-pragma-race.md  team-corpus-glob-via-model-validator.md  version-from-importlib-metadata-not-init-constant.md
.erpaval/solutions/conventions/: changelog-drift-gate-cz-overwrites-handwritten.md  changelog-write-only-via-cz-bump.md  erpaval-parallel-agents-shared-file.md  erpaval-spiral-recovery.md  parallel-coverage-agents-targeted-uncovered-lines.md  sed-rename-pass-three-categories-of-misses.md  test-fakes-absorb-future-kwargs.md  uv-version-pin-via-mise.md
.erpaval/strategy/transcripts-as-compiler/: framing.md  minto-outline.md  review-strategy.md  rumelt-packet.md  (+8 more)
.github/: dependabot.yml
.github/workflows/: bandit.yml  changelog-fixup.yml  ci.yml  codeql.yml  commitlint.yml  leaks.yml  osv.yml  publish.yml  sbom.yml  scorecard.yml  semgrep.yml
docs/: BACKLOG.md  README.md  RELEASING.md  analytics_cookbook.md  cookbook.md  jsonl_schema_v1.sql  research_notes.md
docs/adr/: 0015-stack-modernization.md  0016-ci-hardening.md  0017-claude-code-tool-taxonomy-transition.md
docs/analysis/: dead-code.md  ownership.md  risk-hotspots.md
docs/architecture/: data-flow.md  module-map.md  system-overview.md
docs/behavior/: processes.md  state-machines.md
docs/contributing/: codeql-hygiene.md
docs/insights/: business-logic.md  contract-map.md  debugging-guide.md  impact-analysis.md  tech-debt.md
docs/queries/: thread_walk.sql
docs/reference/: cli-manifest.md  cli.md  public-api.md
docs/rfc/: 0001-transcript-pr-binding.md  0002-vision-and-roadmap.md
docs/v2/: DESIGN.md  MIGRATION.md  README.md
mise-tasks/: build-dist
proofs/: .gitignore  ClaudeSql.lean  lake-manifest.json  lakefile.toml
proofs/ClaudeSql/: Backoff.lean  Basic.lean  Hamming.lean  TurnSort.lean
scripts/: gen_cli_manifest_doc.py
src/claude_sql/: __init__.py  binding.py  blind_handover.py  checkpointer.py  classify_worker.py  cli.py  cluster_worker.py  community_worker.py  composition.py  config.py  conflicts_worker.py  embed_worker.py  freeze.py  friction_worker.py  ingest.py  install_source.py  judge_worker.py  judges.py  kappa_worker.py  llm_shared.py  llm_worker.py  logging_setup.py  output.py  parquet_shards.py  retry_queue.py  review_sheet_worker.py  schemas.py  session_text.py  skills_catalog.py  sql_views.py  terms_worker.py  trajectory_worker.py  ungrounded_worker.py
tests/: conftest.py  test_analyze_chain.py  test_binding.py  test_binding_extras.py  test_blind_handover.py  test_checkpointer.py  test_checkpointer_extras.py  test_cli.py  test_cli_coverage.py  test_cluster_worker.py  test_collapse_parity.py  test_community_worker.py  test_community_worker_coverage.py  test_community_worker_extras.py  test_config.py  test_config_dir.py  test_conflicts_coverage.py  test_conflicts_storage_v2.py  test_domain_config.py  test_embed_canonical_skip.py  test_embed_worker.py  test_embedding_providers.py  test_freeze.py  test_friction_sql_stamps.py  test_friction_worker.py  test_friction_worker_llm.py  test_hnsw_persistence.py  test_home.py  test_ingest.py  test_install_source.py  test_judge_worker.py  test_judge_worker_extras.py  test_judges.py  test_judges_extras.py  test_kappa_worker.py  test_lance_store.py  test_llm_analytics.py  test_llm_worker.py  test_llm_worker_cache.py  test_llm_worker_parser.py  (+32 more)
tests/property/: strategies.py  test_config_properties.py  test_dedup_properties.py  test_staleness_properties.py  test_transcript_properties.py
(+109 files in other folders)
