[project]
name = "claude-sql-workspace"
version = "1.0.1"
description = "Workspace root for claude-sql packages (core, analytics, evals, provenance, app). The publishable binary is `claude-sql` from packages/app."
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Laith Al-Saadoon", email = "lalsaado@amazon.com" }]
requires-python = ">=3.13"
# Virtual root: no runtime deps. The five workspace members own those.
dependencies = []

[project.urls]
Homepage = "https://github.com/theagenticguy/claude-sql"
Repository = "https://github.com/theagenticguy/claude-sql"
Issues = "https://github.com/theagenticguy/claude-sql/issues"
Changelog = "https://github.com/theagenticguy/claude-sql/blob/main/CHANGELOG.md"

# ---------------------------------------------------------------------------
# uv — reproducibility + host-python independence + workspace topology.
# ---------------------------------------------------------------------------
#
# `package = false` makes this a virtual project: uv does NOT try to build
# or install the workspace root as a package. The five members under
# packages/* are the publishable units; the root is the conductor.
#
# `[tool.uv.workspace]` + `[tool.uv.sources]` wire each member as an
# editable workspace dependency. uv resolves a single uv.lock for every
# member, and `uv sync` installs the whole graph editable.
[tool.uv]
required-version = ">=0.11.7"
resolution = "highest"
python-preference = "only-managed"
python-downloads = "automatic"
compile-bytecode = true
link-mode = "clone"
package = false

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
claude-sql-core = { workspace = true }
claude-sql-analytics = { workspace = true }
claude-sql-evals = { workspace = true }
claude-sql-provenance = { workspace = true }
claude-sql = { workspace = true }

# Named indexes for ``uv publish --index <name>``.  TestPyPI is the
# dry-run target; production PyPI is the implicit default.
[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[dependency-groups]
dev = [
    "bandit[sarif]>=1.9.4",
    "commitizen>=4.13.10",
    "import-linter>=2.3",
    "lefthook>=2.1.6",
    "moto[s3]>=5.2.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.11",
    "ty>=0.0.31",
]

# ---------------------------------------------------------------------------
# ruff — workspace-wide config; paths expanded for packages/*/src layout.
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py313"
line-length = 100
src = ["packages/core/src", "packages/analytics/src", "packages/evals/src", "packages/provenance/src", "packages/app/src", "tests"]

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "N", "UP", "B", "SIM",
    "ANN", "ASYNC", "BLE", "C4", "DTZ", "ERA", "FBT", "G",
    "ICN", "ISC", "LOG", "PERF", "PIE", "PL", "PT", "PTH",
    "RET", "RSE", "S", "T20", "TID", "TRY", "PGH", "RUF",
]
ignore = [
    "E501", "ISC001", "COM812",
    "ANN401",
    "TRY003", "TRY300",
    "PLR0911", "PLR0912", "PLR0913", "PLR0915", "PLR2004",
    "PLC0415",
    "S603", "S607",
    "S608",
    "RUF001", "RUF002", "RUF003",
    "PTH111",
    "PERF203",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = [
    "S101", "S105", "S106", "S107",
    "PLR2004", "ANN", "T20",
    "FBT001", "FBT002",
    "SLF001", "PT011", "PT018", "D",
]
"**/__init__.py" = ["F401", "E402"]
# Glob-style keys so the ignores travel with the file regardless of which
# package it lands in. ``cli.py`` and ``output.py`` legitimately call
# print() at the CLI boundary; T20 must not fire there.
"**/cli.py" = ["T20"]
"**/output.py" = ["T20"]
"scripts/**/*" = ["T20", "S101", "ANN"]

[tool.ruff.lint.isort]
known-first-party = ["claude_sql", "conftest"]
combine-as-imports = true
split-on-trailing-comma = true

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

# Forbid stdlib `logging` everywhere in claude-sql. The whole package logs
# via loguru. See best-practices/loguru-only-no-stdlib-logging.md.
[tool.ruff.lint.flake8-tidy-imports.banned-api]
"logging".msg = "Use loguru via `from loguru import logger`. For tenacity retry callbacks use `claude_sql.core.logging_setup.loguru_before_sleep('LEVEL')`."

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "cyclopts.Parameter",
    "pydantic.Field",
    "pydantic_settings.SettingsConfigDict",
]

[tool.ruff.lint.flake8-annotations]
ignore-fully-untyped = true
suppress-none-returning = true
allow-star-arg-any = true

[tool.ruff.lint.pylint]
max-args = 8
max-branches = 15
max-returns = 8
max-statements = 60

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
docstring-code-format = true
docstring-code-line-length = "dynamic"

# ---------------------------------------------------------------------------
# ty — workspace-wide; root expands to every member's src + tests.
# ---------------------------------------------------------------------------
[tool.ty.environment]
python-version = "3.13"
python-platform = "linux"
python = ".venv"
root = [
    "./packages/core/src",
    "./packages/analytics/src",
    "./packages/evals/src",
    "./packages/provenance/src",
    "./packages/app/src",
    "./tests",
]

[tool.ty.src]
include = [
    "packages/core/src",
    "packages/analytics/src",
    "packages/evals/src",
    "packages/provenance/src",
    "packages/app/src",
    "tests",
]
respect-ignore-files = true

[tool.ty.terminal]
error-on-warning = true
output-format = "concise"

[tool.ty.rules]
all = "error"
division-by-zero = "ignore"

[[tool.ty.overrides]]
include = ["tests/**"]

[tool.ty.overrides.rules]
not-subscriptable = "ignore"
not-iterable = "ignore"
unsupported-operator = "ignore"
invalid-argument-type = "ignore"
possibly-unresolved-reference = "warn"
possibly-missing-attribute = "warn"
unused-ignore-comment = "warn"

# ---------------------------------------------------------------------------
# bandit — invoked via `bandit -r packages -c pyproject.toml`.
# ---------------------------------------------------------------------------
[tool.bandit]
exclude_dirs = ["tests", ".venv", ".erpaval", "docs"]
skips = ["B101", "B404", "B603", "B607", "B608"]

# ---------------------------------------------------------------------------
# pytest — single tree at workspace root.
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests"]

# ---------------------------------------------------------------------------
# Commitizen — Strategy A: single workspace-root cz, lockstep release.
# Per .erpaval/sessions/session-444fc0/research-uv-recipes.md §5d: defer
# per-package CHANGELOG to a future repo split.
# ---------------------------------------------------------------------------
[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "uv"
version_scheme = "pep440"
tag_format = "v$version"
update_changelog_on_bump = true
major_version_zero = false
annotated_tag = true
changelog_incremental = true
changelog_merge_prerelease = true
allow_abort = false
allowed_prefixes = ["Merge", "Revert", "Pull request", "fixup!", "squash!"]
bump_message = "chore(release): $current_version → $new_version"
pre_bump_hooks = ["uv lock"]
post_bump_hooks = ["uv sync"]

# ---------------------------------------------------------------------------
# import-linter — layered DAG enforcement.
# core (L0) < {analytics, evals, provenance} (L1 siblings) < app (L2).
# ---------------------------------------------------------------------------
[tool.importlinter]
root_packages = [
    "claude_sql.core",
    "claude_sql.analytics",
    "claude_sql.evals",
    "claude_sql.provenance",
    "claude_sql.app",
]

[[tool.importlinter.contracts]]
name = "claude-sql layered architecture"
type = "layers"
layers = [
    "claude_sql.app",
    "claude_sql.analytics | claude_sql.evals | claude_sql.provenance",
    "claude_sql.core",
]

[[tool.importlinter.contracts]]
name = "analytics / evals / provenance are independent siblings"
type = "independence"
modules = [
    "claude_sql.analytics",
    "claude_sql.evals",
    "claude_sql.provenance",
]
