[project]
name = "claude-sql"
version = "1.1.2"
description = "Zero-copy SQL + semantic search + LLM analytics over ~/.claude/ transcripts."
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Laith Al-Saadoon", email = "lalsaado@amazon.com" }]
requires-python = ">=3.13"
keywords = [
    "claude", "claude-code", "anthropic", "duckdb", "sql",
    "semantic-search", "embeddings", "bedrock", "transcripts",
    "analytics", "observability",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Topic :: Software Development",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "anthropic>=0.40",
    "anyio>=4.13.0",
    "boto3>=1.42.91",
    "cyclopts>=4.10.2",
    "duckdb>=1.5.2,<2",
    "hdbscan>=0.8.40",
    "igraph>=1.0.0,<2.0",
    "lancedb>=0.30,<0.31",
    "leidenalg>=0.11.0,<0.12",
    "loguru>=0.7.3",
    "numpy>=2.4.4",
    "packaging>=26.2",
    "polars>=1.40.0",
    "pyarrow>=23.0.1",
    "pydantic>=2.13.2",
    "pydantic-settings>=2.13.1",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.5",
    "scipy>=1.13",
    "tenacity>=9.1.4",
    "tiktoken>=0.12.0",
    "umap-learn>=0.5.12",
]

[project.scripts]
claude-sql = "claude_sql.app.cli:main"

[project.urls]
Homepage = "https://github.com/theagenticguy/claude-sql"
Repository = "https://github.com/theagenticguy/claude-sql"
Issues = "https://github.com/theagenticguy/claude-sql/issues"
Changelog = "https://github.com/theagenticguy/claude-sql/blob/main/CHANGELOG.md"

[build-system]
requires = ["uv_build>=0.11.14,<0.12"]
build-backend = "uv_build"

# Single package, one namespace root with five layer sub-packages
# (core / analytics / evals / provenance / app) under src/claude_sql/.
# `namespace = true` lets uv_build pick up every sub-package under the
# claude_sql.* namespace without enumerating each. `claude-sql` builds as
# ONE self-contained wheel — `uv build` Just Works, no bundle step.
[tool.uv.build-backend]
module-name = "claude_sql"
namespace = true

# ---------------------------------------------------------------------------
# uv — reproducibility + host-python independence.
# ---------------------------------------------------------------------------
[tool.uv]
required-version = ">=0.11.7"
resolution = "highest"
python-preference = "only-managed"
python-downloads = "automatic"
compile-bytecode = true
link-mode = "clone"

# Named indexes for ``uv publish --index <name>``.  TestPyPI is the
# dry-run target; production PyPI is the implicit default.
[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[dependency-groups]
dev = [
    "bandit[sarif]>=1.9.4",
    "commitizen>=4.13.10",
    "import-linter>=2.3",
    "lefthook>=2.1.6",
    "moto[s3,server]>=5.2.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.11",
    "ty>=0.0.31",
]

# ---------------------------------------------------------------------------
# ruff — single src/ tree.
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "N", "UP", "B", "SIM",
    "ANN", "ASYNC", "BLE", "C4", "DTZ", "ERA", "FBT", "G",
    "ICN", "ISC", "LOG", "PERF", "PIE", "PL", "PT", "PTH",
    "RET", "RSE", "S", "T20", "TID", "TRY", "PGH", "RUF",
]
ignore = [
    "E501", "ISC001", "COM812",
    "ANN401",
    "TRY003", "TRY300",
    "PLR0911", "PLR0912", "PLR0913", "PLR0915", "PLR2004",
    "PLC0415",
    "S603", "S607",
    "S608",
    "RUF001", "RUF002", "RUF003",
    "PTH111",
    "PERF203",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = [
    "S101", "S105", "S106", "S107",
    "PLR2004", "ANN", "T20",
    "FBT001", "FBT002",
    "SLF001", "PT011", "PT018", "D",
]
"**/__init__.py" = ["F401", "E402"]
# Glob-style keys so the ignores travel with the file regardless of where
# it lands in the tree. ``cli.py`` and ``output.py`` legitimately call
# print() at the CLI boundary; T20 must not fire there.
"**/cli.py" = ["T20"]
"**/output.py" = ["T20"]
# Build/release helper scripts print progress to stdout by design.
"scripts/**/*" = ["T20", "S101", "ANN"]

[tool.ruff.lint.isort]
known-first-party = ["claude_sql", "conftest"]
combine-as-imports = true
split-on-trailing-comma = true

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

# Forbid stdlib `logging` everywhere in claude-sql. The whole package logs
# via loguru. See best-practices/loguru-only-no-stdlib-logging.md.
[tool.ruff.lint.flake8-tidy-imports.banned-api]
"logging".msg = "Use loguru via `from loguru import logger`. For tenacity retry callbacks use `claude_sql.core.logging_setup.loguru_before_sleep('LEVEL')`."

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "cyclopts.Parameter",
    "pydantic.Field",
    "pydantic_settings.SettingsConfigDict",
]

[tool.ruff.lint.flake8-annotations]
ignore-fully-untyped = true
suppress-none-returning = true
allow-star-arg-any = true

[tool.ruff.lint.pylint]
max-args = 8
max-branches = 15
max-returns = 8
max-statements = 60

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
docstring-code-format = true
docstring-code-line-length = "dynamic"

# ---------------------------------------------------------------------------
# ty — single src/ tree.
# ---------------------------------------------------------------------------
[tool.ty.environment]
python-version = "3.13"
python-platform = "linux"
python = ".venv"
root = ["./src", "./tests"]

[tool.ty.src]
include = ["src", "tests"]
respect-ignore-files = true

[tool.ty.terminal]
error-on-warning = true
output-format = "concise"

[tool.ty.rules]
all = "error"
division-by-zero = "ignore"

[[tool.ty.overrides]]
include = ["tests/**"]

[tool.ty.overrides.rules]
not-subscriptable = "ignore"
not-iterable = "ignore"
unsupported-operator = "ignore"
invalid-argument-type = "ignore"
possibly-unresolved-reference = "warn"
possibly-missing-attribute = "warn"
unused-ignore-comment = "warn"

# ---------------------------------------------------------------------------
# bandit — invoked via `bandit -r src -c pyproject.toml`.
# ---------------------------------------------------------------------------
[tool.bandit]
exclude_dirs = ["tests", ".venv", ".erpaval", "docs"]
skips = ["B101", "B404", "B603", "B607", "B608"]

# ---------------------------------------------------------------------------
# pytest — single tree at repo root.
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests"]

# ---------------------------------------------------------------------------
# Commitizen — single package, single version. `version_provider = "uv"`
# reads/writes [project].version here; one tag, one CHANGELOG.
# ---------------------------------------------------------------------------
[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "uv"
version_scheme = "pep440"
tag_format = "v$version"
update_changelog_on_bump = true
major_version_zero = false
annotated_tag = true
changelog_incremental = true
changelog_merge_prerelease = true
allow_abort = false
allowed_prefixes = ["Merge", "Revert", "Pull request", "fixup!", "squash!"]
bump_message = "chore(release): $current_version → $new_version"
pre_bump_hooks = ["uv lock"]
post_bump_hooks = ["uv sync"]

# ---------------------------------------------------------------------------
# import-linter — layered DAG enforcement, now intra-package.
# core (L0) < {analytics, evals, provenance} (L1 siblings) < app (L2).
# The layers live under one distribution but the architectural boundary
# is still enforced so the modules can't quietly entangle.
# ---------------------------------------------------------------------------
[tool.importlinter]
root_packages = ["claude_sql"]

[[tool.importlinter.contracts]]
name = "claude-sql layered architecture"
type = "layers"
layers = [
    "claude_sql.app",
    "claude_sql.analytics | claude_sql.evals | claude_sql.provenance",
    "claude_sql.core",
]

[[tool.importlinter.contracts]]
name = "analytics / evals / provenance are independent siblings"
type = "independence"
modules = [
    "claude_sql.analytics",
    "claude_sql.evals",
    "claude_sql.provenance",
]
